<resources>
    <string name="app_name">Two Chairs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="creators">Creators</string>
    <string name="game_option">Game option</string>
    <string name="number_question">Number of questions</string>
    <string name="players">Players</string>
    <string name="player_name">Player name</string>
    <string name="interview_st">Interview with</string>
    <string name="player">player</string>
    <string name="questions_remain">Questions remain</string>
    <string name="skip">skip</string>
    <string name="title_size_text">26dp</string>
    <string name="retry_play">Play again</string>
    <string name="change_player">New Game</string>
    <string name="back_menu">Back menu</string>
    <string name="skiped">Skipped</string>
    <string name="ressult_interview">Result interview</string>

    <string name="action_help">Help</string>
    <string name="action_add_pack">Create new pack</string>
    <string name="action_delete_pack">Delete</string>
    <string name="action_add_quest">Create question</string>
    <string name="action_refactor">Refactor</string>
    <string name="action_rename">Rename</string>
</resources>