<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".ResultFragment">

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0"
        android:background="@drawable/line" />

    <TextView
        android:textSize="@string/title_size_text"
        android:textStyle="bold"
        android:gravity ="center"
        android:layout_gravity ="center"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="TextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8" />

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity= "center">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:padding="4dp"
            android:text="@string/retry_play" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/change_player" />

        <Button

            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/back_menu" />
    </LinearLayout>

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0"
        android:background="@drawable/line" />

</LinearLayout>