<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".presenter.game.GameFragment">

    <View

        android:id="@+id/view3"
        android:layout_width="0dp"

        android:layout_height="10dp"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View

        android:id="@+id/view2"
        android:layout_width="0dp"

        android:layout_height="10dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imVNegative"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imVPositive"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tVQuestion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="6dp"
        android:text="sdfsgdbfbfgbfggsddgdfgbbfgbfgbfdbvfvdfbfdgbdfgrvfbgfbsdfgdfbgbdgsdfgdfbvfdbdfvdfvfdbffdbdfvsdgfgbgfb "
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bttnSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="169dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/revalia"
        android:gravity="center"
        android:text="@string/interview_st"
        android:textSize="@string/title_size_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/tVNamePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="34sp"

        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/tVQuewstionLost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/questions_remain"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tVQuewstionLost"
        app:layout_constraintEnd_toEndOf="@+id/tVQuewstionLost"
        app:layout_constraintStart_toStartOf="@+id/tVQuewstionLost" />

    <Button
        android:id="@+id/bttnSkip"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/imVPositive"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/imVNegative" />

</androidx.constraintlayout.widget.ConstraintLayout>